platform/infrastructure/networking/nginx/base/ingress-argo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    # cert-manager.io/cluster-issuer: letsencrypt-dns
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"  # disabled: ArgoCD runs in insecure mode (HTTP)
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argo.syncjob.ru
      secretName: wildcard-syncjob-tls
  rules:
    - host: argo.syncjob.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
